--- a/build.gradle
+++ b/build.gradle
@@ -10,16 +10,18 @@ repositories {
 }
 
 dependencies {
-    implementation('org.apache.tomcat.embed:tomcat-embed-core:9.0.58')
-    implementation('org.apache.tomcat.embed:tomcat-embed-jasper:9.0.58')
+    implementation('org.apache.tomcat.embed:tomcat-embed-core:8.5.42')
+    implementation('org.apache.tomcat.embed:tomcat-embed-jasper:8.5.42')
 
     implementation('javax.servlet:javax.servlet-api:4.0.1')
     implementation('javax.servlet:jstl:1.2')
 
     implementation('ch.qos.logback:logback-classic:1.2.10')
+    implementation('org.reflections:reflections:0.10.2')
 
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
+    testImplementation('org.assertj:assertj-core:3.21.0')
 }
 
 test {
